<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/updateDelete_tv_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType = "textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowTitle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveTitle" />

    <EditText
        android:id="@+id/updateDelete_tv_category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowCategory"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveCategory" />

    <EditText
        android:id="@+id/updateDelete_tv_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType = "textMultiLine"
        android:lines="8"
        android:maxLength="400"
        android:maxLines="10"
        android:minLines="6"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowDescription"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveDescription" />

    <EditText
        android:id="@+id/updateDelete_tv_source"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType = "textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowSource"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveSource" />

    <Button
        android:id="@+id/updateDelete_btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/black"
        android:text="Update"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowButtons"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveButtons" />

    <Button
        android:id="@+id/updateDelete_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="Delete"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowButtons"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveButtons" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

</androidx.constraintlayout.widget.ConstraintLayout>