...
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDateBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineDateTop" />

    <TextView
        android:id="@+id/keyword_rec_view_tv_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxLength="60"
        android:text="title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="#000000"
...
